@@ -224,6 +224,13 @@ namespace MonoTests.System.Drawing
 			} catch (Exception e) {
 				Assert.IsTrue (e is NotSupportedException, "CT#7");
 			}
+
+			try {
+				// culture == null
+				ptconv.ConvertTo (null, null, pt, typeof (string));
+			} catch (NullReferenceException e) {
+				Assert.Fail ("CT#8: must not throw NullReferenceException");
+			}
 		}
 
 		[Test]
